objects/copado__Notification_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>copado__Channels__c</fullName>
        <label>Channels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__NotificationChannels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Notification_Name__c</fullName>
        <description>Label of the notification</description>
        <label>Notification Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Subscribed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__User_Default_Notification__c</fullName>
        <label>User Default Notification</label>
        <referenceTo>copado__Notification_Default_Channels__c</referenceTo>
        <relationshipLabel>Notification Subscriptions</relationshipLabel>
        <relationshipName>Notification_Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Notification Subscription</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>